<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="welcome">myLock Settings</string>
<string name="app_name">myLock Auto Unlock</string>
<string name="activeBox">Enabled</string>
<string name="secureBox">Security Pattern - Pattern lock will be turned off while myLock is running and forced on at reboot. Idle Lock does not work unless you set a pattern first.</string>

<string name="enabled">myLock</string>
<string name="disabled">null</string>

<string name="guard_on">Require lockscreen when waking via sliding the keypad slider open</string>
<string name="guard_off">Waking via sliding keypad open will auto unlock</string>

<string name="fg_on">myLock will be displayed in the notification panel</string>
<string name="fg_off">myLock status will only be shown on the widget</string>

<string name="sec_on">Pattern is active. myLock will disable security while running and restore it when stopped.</string>
<string name="sec_off">Pattern is not active. Set up Security from system prefs.</string>

<string name="unguard">Advanced mode - volume and camera (and trackball on the nexus one) will wake and unlock.</string>
<string name="wplock">Hide lockscreen and show the wallpaper during auto-unlock (best results with all animations enabled in the display settings)</string>

<string name="AutoMode">Auto unlock - lockscreen visible during unlock, side keys locked</string>
<string name="HideLock">Hide lockscreen - wallpaper shown instead, side keys locked</string>
<string name="Advanced">Advanced mode - removes lockscreen, side keys wake and unlock</string>


<string name="howto_title">ReadMe</string>
<string name="HowToFull">myLock automatically minimizes the lockscreen. Side buttons remain locked down, but waking the phone with the slider, keypad buttons, or power key will auto unlock.
If the phone reboots while myLock is running, it will start back up automatically with your preferred settings. Do not attempt to change the security pattern or create one while myLock is enabled. Always uncheck enabled first. </string>

<string name="ts_title">Problem?</string>
<string name="Troubleshooting">Please see our faq and troubleshooting pages linked on our site (mylockandroid.blogspot.com) first. If you notice an issue that happens consistently, download Log Collector (free from the market) to email us at myLockandroid@gmail.com. Be sure to list the problem symptoms and what other services are running in the Settings->Applications->Running Services screen. I will research the cause of the trouble and code a fix when possible.</string>


<string name="permlab_toggle">myLock plug-in permission</string>
<string name="permdesc_toggle">Allows plug-ins to toggle myLock</string>

<string name="userlabel">myLock auto unlock</string>


</resources>
